No compaction bug fix